GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/Gift_Club_Totals__c.object-meta.xml
<CustomObject>
    <description>Tracking transactional totals for Gift Club categories</description>
    <label>Gift Club Totals</label>
    <nameField>
        <label>Gift Club Totals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Club Totals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>