GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Club Totals</relationshipLabel>
    <relationshipName>Gift_Club_Totals</relationshipName>
    <type>Lookup</type>
</CustomField>