GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Club Totals</relationshipLabel>
    <relationshipName>Gift_Club_Totals</relationshipName>
    <type>Lookup</type>
</CustomField>