GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Degree_Year__c.field-meta.xml
<CustomField>
    <fullName>Degree_Year__c</fullName>
    <label>Degree Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>