GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Gift_Club_ACS__c.field-meta.xml
<CustomField>
    <fullName>Gift_Club_ACS__c</fullName>
    <description>Running Annual Total for Andrew Carnegie Society - Expected Fiscal Year Cash - $2500.00US to Qualify in ANY allocation</description>
    <label>Gift Club ACS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>