GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Gift_Club_Heinz__c.field-meta.xml
<CustomField>
    <fullName>Gift_Club_Heinz__c</fullName>
    <description>Running Annual Total for Heinz College Dean&apos;s Circle - Expected Fiscal Year Cash - $2500.00US to Qualify in Heinz College allocation</description>
    <label>Gift Club Heinz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>