GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Gift_Club_WLMS__c.field-meta.xml
<CustomField>
    <fullName>Gift_Club_WLMS__c</fullName>
    <description>Running Annual Total for WL Mellon Society of Expected Fiscal Year Cash
- {Student: $500},
- {Recent Grads: $1000 - 5yrs, RND Dec grads}
- {Anyone $2500}</description>
    <label>Gift Club WLMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>