GoalTracker/force-app/main/default/objects/Gift_Club_Totals__c/fields/Student_Alum__c.field-meta.xml
<CustomField>
    <fullName>Student_Alum__c</fullName>
    <description>Student, Alum, Blank</description>
    <label>Student Alum</label>
    <length>10</length>
    <type>Text</type>
</CustomField>